implemented hush function, to clear engine function just before stop, update patch version

--- a/assets/index.html
+++ b/assets/index.html
@@ -258,7 +258,10 @@
       engine.play();
     });
 
-    $("stopButton", "click", () => engine.stop());
+    $("stopButton", "click", () => {
+      engine.hush();
+      engine.stop()
+    });
 
     $("loadSamplesButton", "click", () => {
       if(engine){
