removing suspension from eval

--- a/assets/index.html
+++ b/assets/index.html
@@ -264,7 +264,7 @@
 
     $("stopButton", "click", () => {
       engine.hush();
-      engine.stop()
+      // engine.stop()
     });
 
     $("loadSamplesButton", "click", () => {
