updated import index.html

--- a/test/index.html
+++ b/test/index.html
@@ -236,7 +236,7 @@
       Learner,
       getBlock,
       // takeOverConsole
-    } from "../sema-engine.mjs";
+    } from "../index.mjs";
 
     let engine,
         analyser = 0,
