--- a/test/index.html
+++ b/test/index.html
@@ -501,11 +501,11 @@
       return editor;
     }
 
-    // const editorLivecode = setupEditorWithContent("textArea-livecode", '/langs/default-0-lc.txt');
-    // const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/langs/default-grammar.txt');
+    const editorLivecode = setupEditorWithContent("textArea-livecode", '/test/langs/default-5-lc.txt');
+    const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/test/langs/default-grammar.txt');
     const editorJS =       setupEditorWithContent("textArea-js",       '/test/js/default-3-js.txt');
-    const editorLivecode = setupEditorWithContent("textArea-livecode", '/test/langs/rubber-duckling-lc-1.txt');
-    const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/test/langs/rubber-duckling-grammar.txt');
+    // const editorLivecode = setupEditorWithContent("textArea-livecode", '/test/langs/rubber-duckling-lc-1.txt');
+    // const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/test/langs/rubber-duckling-grammar.txt');
 
   </script>
 </body>
