--- a/test/index.html
+++ b/test/index.html
@@ -391,48 +391,66 @@
 
 		const subscribeMidiEvents = input => {
 
-			input.addListener('pitchbend', "all", function(e) {
-				console.log("Pitch value: " + e.value);
-			});
+     if(engine){
 
-			// Listen for a 'note on' message on all channels
-			input.addListener('noteon',
-				"all",
-				e => console.log("Received 'noteon' message (" + e.note.name + e.note.octave + ")." )
-			);
+				try{
+          const id = "midi",
+                ttype = "midiAll",
+                blockSize = 2;
 
-			// Listen to pitch bend message on channel 3
-			input.addListener('pitchbend',
-				3,
-				e => console.log("Received 'pitchbend' message.", e)
-			);
+          let sab = engine.createSharedBuffer(id, ttype, blockSize);
 
-			// Listen to control change message on all channels
-			input.addListener('controlchange',
-				"all",
-				e => console.log("Received 'controlchange' message.", e)
-			);
+					input.addListener('pitchbend',
+														'all',
+														e => {
+															console.log("Pitch value: " + e.value);
+														}
+					);
 
-			// Listen to NRPN message on all channels
-			input.addListener('nrpn', "all",
-				e => {
-					if(e.controller.type === 'entry') {
-						console.log("Received 'nrpn' 'entry' message.", e);
-					}
-					if(e.controller.type === 'decrement') {
-						console.log("Received 'nrpn' 'decrement' message.", e);
-					}
-					if(e.controller.type === 'increment') {
-						console.log("Received 'nrpn' 'increment' message.", e);
-					}
-					console.log("message value: " + e.controller.value + ".", e);
-				}
-			);
+					// Listen for a 'note on' message on all channels
+					input.addListener('noteon',
+														"all",
+														e => console.log("Received 'noteon' message (" + e.note.name + e.note.octave + ")." )
+					);
 
-			input.addListener('programchange',
-				"12",
-				e => console.log("Received 'programchange' message.", e)
-			);
+					// Listen to pitch bend message on channel 3
+					input.addListener('pitchbend',
+														3,
+														e => console.log("Received 'pitchbend' message.", e)
+					);
+
+					// Listen to control change message on all channels
+					input.addListener('controlchange',
+														"all",
+														e => console.log("Received 'controlchange' message.", e)
+					);
+
+					// Listen to NRPN message on all channels
+					input.addListener('nrpn', "all",
+						e => {
+							if(e.controller.type === 'entry') {
+								console.log("Received 'nrpn' 'entry' message.", e);
+							}
+							if(e.controller.type === 'decrement') {
+								console.log("Received 'nrpn' 'decrement' message.", e);
+							}
+							if(e.controller.type === 'increment') {
+								console.log("Received 'nrpn' 'increment' message.", e);
+							}
+							console.log("message value: " + e.controller.value + ".", e);
+						}
+					);
+
+					input.addListener('programchange',
+						"12",
+						e => console.log("Received 'programchange' message.", e)
+					);
+
+        } catch (err) {
+          console.error("ERROR: Failed to create new channel for MIDI data: ", err);
+        }
+      }
+      else throw new Error('ERROR: Engine not initialized. Please press Start Engine first.')
 		}
 
 
@@ -444,14 +462,14 @@
 								console.log("WebMidi could not be enabled.", err);
 							else {
 								console.log("WebMidi enabled!");
-								WebMidi.inputs.map(i => console.log(i.name))
+
+								WebMidi.inputs.map(i => {
+									console.log(i.name)
+									subscribeMidiEvents(WebMidi.getInputByName(i.name));
+								})
+
 								WebMidi.outputs.map(o => console.log(o.name))
 
-								// let input = WebMidi.getInputByName("Axiom Pro 25 USB A In");
-								let input_xtone = WebMidi.getInputByName("XTONE");
-								let input_mio = WebMidi.getInputByName("mio");
-								if(input_xtone) subscribeMidiEvents(input_xtone);
-								if(input_mio) subscribeMidiEvents(input_mio);
 							};
 						})
         } catch (err) {
@@ -529,11 +547,11 @@
           let avail = engine.sharedArrayBuffers[v].rb.available_read();
           if ( avail > 0 && avail != engine.sharedArrayBuffers[v].rb.capacity ) {
             for (let i = 0; i < avail; i += engine.sharedArrayBuffers[v].blocksize) {
-              if(engine.sharedArrayBuffers[v].ttype === 'scope'){
+              // if(engine.sharedArrayBuffers[v].ttype === 'scope'){
                 let val = new Float64Array(engine.sharedArrayBuffers[v].blocksize);
                 engine.sharedArrayBuffers[v].rb.pop(val);
                 console.log(v, val);
-              }
+              // }
             }
           }
         }
